--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-sass": "^1.0.0",
+    "express": "^4.16.4",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^7.0.1",
     "next-compose-plugins": "^2.1.1",
